[package]
name = "top_down_bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
rand = "0.8.5"
bevy_rapier2d = { version = "0.25.0", features = ["simd-stable", "debug-render-2d"] }
bevy_ecs_ldtk = "0.9.0"
bevy_ecs_tilemap = "0.12.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
